tests/snapshots/run_wpt_conformance__litert_reduceSum_float16_4D_tensor_options_axes_with_options_keepDimensions_true.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
reduce_sum.https.any.js reduceSum float16 4D tensor options.axes with options.keepDimensions=true, litert
 Failed to dispatch graph: LiteRT status error: code=3

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    reduceSumInput: f16[2, 2, 2, 3];
  }

  nodes {
    [reduceSumOutput] = reduceSum(reduceSumInput, axes=[1, 3], keepDimensions=true, label="");
  }

  outputs { reduceSumOutput; }
}
